--- a/Hubbard/square_16_PP_112_112_8.md
+++ b/Hubbard/square_16_PP_112_112_8.md
@@ -1,4 +1,6 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method                                                          | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 |     -191.705          |   4e-03         |    1.52e+01      |  VMC with stripe of wavelength 8  (+Jastrow and backflow)        |                                |
+|     -193.12           |   1e-02         |                  |  FN on the state above                                           |                                |
 |     -190.451          |   8e-03         |    2.66e+01      |  VMC with uniform BCS pairing (+Jastrow and backflow)            |                                |
+|     -191.977          |   7e-03         |                  |  FN on the state above                                           |                                |
