--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,1 +1,3 @@
-|-34.7298933375         |0                |0                 | DMRG                                                              |
+| Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
+|-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
+| -34.7298933375        | 0               | 0                | DMRG                                                             |
