--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,3 +1,3 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
-| -34.7298933375        | 0               | 0                | DMRG                                                             |
+| -353.76622227495      | 0               | 0                | DMRG (max truncation error ~ 1.0E-12 )                           |
