--- a/Heisenberg/chain_200_P_200.md
+++ b/Heisenberg/chain_200_P_200.md
@@ -1,4 +1,4 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
-|     | 0               | 0                | DMRG (max truncation error ~ 1.0E-12 )                           |
+| -354.534213002        | 0               | 0                | DMRG (max truncation error ~ 3.0E-12 )                           |
 
