--- a/Hubbard/square_16_PP_112_112_8.md
+++ b/Hubbard/square_16_PP_112_112_8.md
@@ -4,4 +4,4 @@
 |     -193.12           |   1e-02         |                  |  FN on the state above                                           |                                |
 |     -190.451          |   8e-03         |    2.66e+01      |  VMC with uniform BCS pairing (+Jastrow and backflow)            |                                |
 |     -191.977          |   7e-03         |                  |  FN on the state above                                           |                                |
-|    -194.215    |     7e-03    |  1.52(13)  | VAFQMC  stripe length 8
+|    -194.215    |     7e-03    |  1.52(13)  | VAFQMC  stripe length 8 |   git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.3n/pbc
