--- a/Hubbard/square_16_AP_107_107_8.md
+++ b/Hubbard/square_16_AP_107_107_8.md
@@ -2,4 +2,4 @@
 | ----------------| ----------------| -----------------| ----------------| -----------------| --------------------------------------------------------------------------------| ------------------|
 |    -204.48(7) |   0.0175  |   49.7(16)      |                             | (pi,pi)              | mVMC with SU(2) and momentum projections (gamma point) + RBM + Lanczos, (U=8) ,  alpha = 1 |    | 
 
-|  -210.772224 | .007680 |  1.57(20)  |  VAFQMC stripe length 8 APBC along the stripe |  git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8m5/b1.3n/pbc 
+|  -210.772224 | .007680 |  1.57(20)  |||  VAFQMC stripe length 8 APBC along the stripe |  git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8m5/b1.3n/pbc |
