--- a/Hubbard/square_16_AP_128_128_8.md
+++ b/Hubbard/square_16_AP_128_128_8.md
@@ -3,4 +3,4 @@
 |    -132.86(2) |   0.0044  |   8.1(3)       |                             | (pi,pi)              | mVMC with SU(2) and momentum projections (gamma point) + RBM + Lanczos, (U=8)     | 
 
 
-| -134.2125  |  .00923 |  1(2)  |  VAFQMC |  git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/muf4/pbcapbc/b4n
+| -134.2125  |  .00923 |  1(2)  |||  VAFQMC |  git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/muf4/pbcapbc/b4n |
