--- a/Hubbard/square_16_PP_112_112_6.md
+++ b/Hubbard/square_16_PP_112_112_6.md
@@ -1,4 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method                                                          | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 
- |   -221.676288   |   .005632   |    0.67(14)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc 
+|   -221.676288   |   .005632   |    0.67(14)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc |
