--- a/Hubbard/square_16_PP_117_117_8.md
+++ b/Hubbard/square_16_PP_117_117_8.md
@@ -1,4 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method                                                          | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 
- |   -175.815680   |   .013312   |    1.86(29)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p5/b1.3n/pbc 
+|   -175.815680   |   .013312   |    1.86(29)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p5/b1.3n/pbc |
