--- a/Hubbard/square_16_PP_118_118_8.md
+++ b/Hubbard/square_16_PP_118_118_8.md
@@ -1,4 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method                                                          | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 
- |   -172.069888   |   .013312   |    1.75(34)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p6/b1.3n/pbc 
+|   -172.069888   |   .013312   |    1.75(34)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p6/b1.3n/pbc |
