--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,3 +1,3 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
-| -353.766222278.       |                 | 0.0001475        | DMRG (max truncation error ~ 1.0E-12 )                           |
+| -353.766222278        |                 | 0.0001475        | DMRG (max truncation error ~ 1.0E-14 )                           |
