--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,3 +1,3 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
-| -353.766222278        |                 | 6.3E-10          | DMRG (max truncation error ~ 1.0E-14 )                           |
+| -353.766222278        |                 |          | DMRG (max truncation error ~ 1.0E-14 )                           |
