--- a/Heisenberg/chain_200_P_200.md
+++ b/Heisenberg/chain_200_P_200.md
@@ -1,4 +1,4 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
-| -354.534213002        |                 |  0.000640        | DMRG (max truncation error ~ 2.8E-12 )                           |
+| -354.534213002        |                 |  2.559E-8        | DMRG (max truncation error ~ 2.8E-12 )                           |
 |   -354.4774           |   0.0013        |  0.595           |  VMC with projected fermions + Jastrow                           |                                     |
