--- a/Hubbard/square_16_AP_128_128_8.md
+++ b/Hubbard/square_16_AP_128_128_8.md
@@ -4,3 +4,5 @@
 
 
 | -134.2125  |  .00923 |  1(2)  |||  VAFQMC |  git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/muf4/pbcapbc/b4n |
+
+| -134.25    | 0.03    |            |                  |                    | AFQMC from Qin et al. PRB 2016 |
