--- a/Hubbard/square_16_PP_112_112_6.md
+++ b/Hubbard/square_16_PP_112_112_6.md
@@ -2,3 +2,5 @@
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 
 |   -221.676288   |   .005632   |    0.67(14)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc |
+
+|   -224.071      |   0.095     |               |AFQMC with self-consistent constraint using GHF trial WF; no upper boundary property||
