Add RBM baseline

--- a/Heisenberg/chain_200_P_200.md
+++ b/Heisenberg/chain_200_P_200.md
@@ -2,3 +2,4 @@
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
 | -354.534213002        |                 |  2.559E-8        | DMRG (max truncation error ~ 2.8E-12 )                           |
 |   -354.4774           |   0.0013        |  0.595           |  VMC with projected fermions + Jastrow                           |                                     |
+| -351.341              | 0.0037          | 14.3102          | RBM (alpha = 1)                                                  |                                     |
