--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,3 +1,4 @@
 | Energy                | Sigma           | Energy Variance  | Method                                                           | Data Repository                     |
 |-----------------------|-----------------|------------------|------------------------------------------------------------------|-------------------------------------|
 | -353.766222278        |                 |   5.4E-9         | DMRG (max truncation error ~ 1.0E-14 )                           |
+| -350.272              | 0.0040          | 16.3572          | RBM (alpha = 1)                                                  |                                     |
