--- a/Hubbard/square_16_PP_116_116_8.md
+++ b/Hubbard/square_16_PP_116_116_8.md
@@ -2,3 +2,4 @@
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 
 |   -179.546368   |   .008192   |    1.63(20)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p4/b1.3n/pbc |
+|  -176.978       |   6e-03     |   15.46       |   VMC stripe lenght=8 (+ Jastrow and backflow) |    
