--- a/Hubbard/square_16_PP_114_114_8.md
+++ b/Hubbard/square_16_PP_114_114_8.md
@@ -1,3 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method   | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------
 |   -186.978304   |   .012032   |    2.04(32)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8pp/b1.3n/pbc |
+|   -184.398   |   7e-03     |   15.83   |  VMC stripe length=8 (+ Jastrow and backflow) | |
