--- a/Hubbard/square_16_PP_112_112_4.md
+++ b/Hubbard/square_16_PP_112_112_4.md
@@ -2,4 +2,4 @@
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
 |   -263.465472   |   .004608   |    0.25(6)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b2.6n/pbc |
 |   -264.362      |   0.017     |              |AFQMC with self-consistent constraint using GHF trial WF; no upper boundary property||
-|  -261.477       |   3e-03     |  8.64        |  VMC stripe length=8 (+ Jastrow and backflow) |  |
+|  -261.477       |   3e-03     |  8.64        |  VMC uniform state (+ Jastrow and backflow) |  |
