--- a/Hubbard/square_16_PP_110_110_8.md
+++ b/Hubbard/square_16_PP_110_110_8.md
@@ -1,4 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  |  Method                                                          | Data repository                |
 | ----------------------| ----------------| -----------------|------------------------------------------------------------------|------------------------------- |
-
 |   -201.037056   |   .015104   |    1.09(33)   | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8m2/b1.3n/pbc |
+|  -198.461   |  6e-03    |    16.91   |   VMC stripe length=8 (+ Jastrow and backflow) | |
