--- a/Heisenberg/chain_200_O_200.md
+++ b/Heisenberg/chain_200_O_200.md
@@ -1,4 +1,5 @@
 | Energy         | Sigma  | Energy Variance | DOF | Method                                 | Data Repository |
 |----------------|--------|-----------------|-----|----------------------------------------|-----------------|
 | -353.766222278 |        | 5.4E-9          | 200 | DMRG (max truncation error ~ 1.0E-14 ) |                 |
-| -350.272       | 0.0040 | 16.3572         | 200 | RBM (alpha = 1)                        |                 |
+| -350.2717      | 0.0040 | 16.35715        | 200 | RBM (alpha = 1)                        |                 |
+| -345.9215      | 0.0044 | 19.99755        | 200 | Jastrow baseline                       |                 |
