--- a/Heisenberg/chain_200_P_200.md
+++ b/Heisenberg/chain_200_P_200.md
@@ -2,4 +2,5 @@
 |----------------|--------|-----------------|-----|----------------------------------------|-----------------|
 | -354.534213002 |        | 2.559E-8        | 200 | DMRG (max truncation error ~ 2.8E-12 ) |                 |
 | -354.4774      | 0.0013 | 0.595           | 200 | VMC with projected fermions + Jastrow  |                 |
-| -351.341       | 0.0037 | 14.3102         | 200 | RBM (alpha = 1)                        |                 |
+| -351.3410      | 0.0037 | 14.31015        | 200 | RBM (alpha = 1)                        |                 |
+| -346.7672      | 0.0045 | 20.28494        | 200 | Jastrow baseline                       |                 |
