--- a/Hubbard/chain_14_P_4_4_10.md
+++ b/Hubbard/chain_14_P_4_4_10.md
@@ -1,3 +1,4 @@
 |       Energy          |  Sigma          | Energy Variance  | DOF      |Method                                                     | Data repository                |
 | ----------------------| --------------- | -----------------| ------- |------------------------------------------------------------|------------------------------- |
 | -9.945093959690886720 |                 |                  |   8     | Lanczos (Quspin + Scipy)                                   | https://weinbe58.github.io/QuSpin/ |
+| -9.945092 |          |   9.77e-7   |   8     | DMRG (MaxBondDim ~1500, Extrap Eng = -9.9450941 +/- 2.9e-7                               | |
