Update references for Hubbard

--- a/Hubbard/square_256_P_112_6.md
+++ b/Hubbard/square_256_P_112_6.md
@@ -1,5 +1,5 @@
-| Energy      | Sigma   | Energy Variance | DOF | Einf | Method                                                       | Data Repository                                              |
-|-------------|---------|-----------------|-----|------|--------------------------------------------------------------|--------------------------------------------------------------|
-| -221.676288 | .005632 | 0.67(14)        | 224 | 294  | VAFQMC stripe length=8                                       | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc |
-| -224.071    | 0.095   |                 | 224 | 294  | AFQMC with self-consistent constraint using GHF trial WF; no upper boundary property |                                                              |
-| -219.204    | 7e-03   | 11.93           | 224 | 294  | VMC stripe length=8 (+Jastrow and backflow)                  |                                                              |
+| Energy      | Sigma   | Energy Variance | DOF | Einf | Method                                                       | Reference |
+|-------------|---------|-----------------|-----|------|--------------------------------------------------------------|-----------|
+| -221.676288 | .005632 | 0.67(14)        | 224 | 294  | VAFQMC stripe length=8                                       | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc |
+| -224.071    | 0.095   |                 | 224 | 294  | AFQMC with self-consistent constraint using GHF trial WF; no upper boundary property | TODO: ask Shiwei |
+| -219.204    | 7e-03   | 11.93           | 224 | 294  | VMC stripe length=8 (+Jastrow and backflow)                  | TODO: ask Luca |
