--- a/Hubbard/square_256_P_113_8.md
+++ b/Hubbard/square_256_P_113_8.md
@@ -1,3 +1,3 @@
-| Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Data Repository                                              |
-|-------------|---------|-----------------|-----|-----------|------------------------|--------------------------------------------------------------|
-| -190.605312 | .006656 | 1.63(17)        | 226 | 399.03125 | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p/b1.3n/pbc |
+| Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Reference |
+|-------------|---------|-----------------|-----|-----------|------------------------|-----------|
+| -190.605312 | .006656 | 1.63(17)        | 226 | 399.03125 | VAFQMC stripe length=8 | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p/b1.3n/pbc |
