--- a/Hubbard/square_256_P_115_8.md
+++ b/Hubbard/square_256_P_115_8.md
@@ -1,3 +1,3 @@
-| Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Data Repository                                              |
-|-------------|---------|-----------------|-----|-----------|------------------------|--------------------------------------------------------------|
-| -183.254272 | .011776 | 1.06(32)        | 230 | 413.28125 | VAFQMC stripe length=8 | git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8ppp/b1.3n/pbc |
+| Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Reference |
+|-------------|---------|-----------------|-----|-----------|------------------------|-----------|
+| -183.254272 | .011776 | 1.06(32)        | 230 | 413.28125 | VAFQMC stripe length=8 | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8ppp/b1.3n/pbc |
