--- a/Hubbard/square_256_P_112_-4.md
+++ b/Hubbard/square_256_P_112_-4.md
@@ -1,3 +1,3 @@
 | Energy   | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -665.772 | 0.016 |                 | 224 | -196 | AFQMC (Metropolis), numerically exact | TODO: ask Shiwei |
+| -665.772 | 0.016 |                 | 224 | -196 | AFQMC (Metropolis), numerically exact | [code](https://github.com/yyang606/varbench_AFQMC) |
