--- a/Hubbard/square_256_P_112_-8.md
+++ b/Hubbard/square_256_P_112_-8.md
@@ -1,3 +1,3 @@
 | Energy    | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |-----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -1028.169 | 0.014 |                 | 224 | -392 | AFQMC (Metropolis), numerically exact | TODO: ask Shiwei |
+| -1028.169 | 0.014 |                 | 224 | -392 | AFQMC (Metropolis), numerically exact | [code](https://github.com/yyang606/varbench_AFQMC) |
