--- a/Hubbard/square_256_P_128_-4.md
+++ b/Hubbard/square_256_P_128_-4.md
@@ -1,3 +1,3 @@
 | Energy   | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -732.289 | 0.028 |                 | 256 | -256 | AFQMC (Metropolis), numerically exact | TODO: ask Shiwei |
+| -732.289 | 0.028 |                 | 256 | -256 | AFQMC (Metropolis), numerically exact | [code](https://github.com/yyang606/varbench_AFQMC) |
