--- a/Hubbard/square_256_P_128_-8.md
+++ b/Hubbard/square_256_P_128_-8.md
@@ -1,3 +1,3 @@
 | Energy    | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |-----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -1158.261 | 0.015 |                 | 256 | -512 | AFQMC (Metropolis), numerically exact | [code](https://github.com/yyang606/varbench_AFQMC) |
+| -1158.261 | 0.015 |                 | 256 | -512 | AFQMC (Metropolis), numerically exact | [paper](https://journals.aps.org/pra/abstract/10.1103/PhysRevA.92.033603) [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_128_-8/AFQMC/) |
