Added references to AFQMC data (#23)
* added references to AFQMC data

* upated format

* updated format

* Move supplemental docs to a subfolder

* Add paper link

---------

Co-authored-by: Dian Wu <dian.wu@epfl.ch>

--- a/Hubbard/square_256_P_112_-8.md
+++ b/Hubbard/square_256_P_112_-8.md
@@ -1,3 +1,3 @@
 | Energy    | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |-----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -1028.169 | 0.014 |                 | 224 | -392 | AFQMC (Metropolis), numerically exact | TODO: ask Shiwei |
+| -1028.169 | 0.014 |                 | 224 | -392 | AFQMC (Metropolis), numerically exact | [paper](https://journals.aps.org/pra/abstract/10.1103/PhysRevA.92.033603) [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_-8/AFQMC/) |
