--- a/Hubbard/square_256_P_128_-4.md
+++ b/Hubbard/square_256_P_128_-4.md
@@ -1,3 +1,3 @@
 | Energy   | Sigma | Energy Variance | DOF | Einf | Method                                | Reference |
 |----------|-------|-----------------|-----|------|---------------------------------------|-----------|
-| -732.289 | 0.028 |                 | 256 | -256 | AFQMC (Metropolis), numerically exact | TODO: ask Shiwei |
+| -732.289 | 0.028 |                 | 256 | -256 | AFQMC (Metropolis), numerically exact | [paper](https://journals.aps.org/pra/abstract/10.1103/PhysRevA.92.033603) [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_128_-4/AFQMC/) |
