Add scripts for VMC on Hubbard

--- a/Hubbard/square_256_P_112_8.md
+++ b/Hubbard/square_256_P_112_8.md
@@ -1,7 +1,7 @@
 | Energy   | Sigma | Energy Variance | DOF | Einf | Method                                                       | Reference |
 |----------|-------|-----------------|-----|------|--------------------------------------------------------------|-----------|
-| -191.705 | 4e-03 | 1.52e+01        | 224 | 392  | VMC with stripe of wavelength 8 (+Jastrow and backflow)      | TODO: ask Luca |
-| -193.12  | 1e-02 |                 | 224 | 392  | FN on the state above                                        | TODO: ask Luca |
-| -190.451 | 8e-03 | 2.66e+01        | 224 | 392  | VMC with uniform BCS pairing (+Jastrow and backflow)         | TODO: ask Luca |
-| -191.977 | 7e-03 |                 | 224 | 392  | FN on the state above                                        | TODO: ask Luca |
+| -191.705 | 4e-03 | 1.52e+01        | 224 | 392  | VMC with stripe of wavelength 8 (+Jastrow and backflow)      | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_8/VMC-stripes/vmc_hubbard.sh) |
+| -193.12  | 1e-02 |                 | 224 | 392  | FN on the state above                                        | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_8/FN-stripes/fn_hubbard.sh) |
+| -190.451 | 8e-03 | 2.66e+01        | 224 | 392  | VMC with uniform BCS pairing (+Jastrow and backflow)         | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_8/VMC-uniform/vmc_hubbard.sh) |
+| -191.977 | 7e-03 |                 | 224 | 392  | FN on the state above                                        | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_8/FN-uniform/fn_hubbard.sh) |
 | -194.215 | 7e-03 | 1.5(2)          | 224 | 392  | VAFQMC stripe length 8                                       | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.3n/pbc |
