--- a/Hubbard/square_256_P_114_8.md
+++ b/Hubbard/square_256_P_114_8.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf    | Method                                       | Reference |
 |-------------|---------|-----------------|-----|---------|----------------------------------------------|-----------|
 | -186.978304 | .012032 | 2.04(32)        | 228 | 406.125 | VAFQMC stripe length=8                       | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8pp/b1.3n/pbc |
-| -184.398    | 7e-03   | 15.83           | 228 | 406.125 | VMC stripe length=8 (+Jastrow and backflow)  | TODO: ask Luca |
+| -184.398    | 7e-03   | 15.83           | 228 | 406.125 | VMC stripe length=8 (+Jastrow and backflow)  | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_114_8/VMC-uniform/vmc_hubbard.sh) |
