--- a/Hubbard/square_256_P_112_4.md
+++ b/Hubbard/square_256_P_112_4.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf | Method                                                       | Reference |
 |-------------|---------|-----------------|-----|------|--------------------------------------------------------------|-----------|
 | -263.465472 | .004608 | 0.25(6)         | 224 | 196  | VAFQMC stripe length=8                                       | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b2.6n/pbc |
-| -261.477    | 3e-03   | 8.64            | 224 | 196  | VMC uniform state (+Jastrow and backflow)                    | TODO: ask Luca |
+| -261.477    | 3e-03   | 8.64            | 224 | 196  | VMC uniform state (+Jastrow and backflow)                    | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_4/VMC-uniform/vmc_hubbard.sh) |
