--- a/Hubbard/square_256_P_116_8.md
+++ b/Hubbard/square_256_P_116_8.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf  | Method                                       | Reference |
 |-------------|---------|-----------------|-----|-------|----------------------------------------------|-----------|
 | -179.546368 | .008192 | 1.63(20)        | 232 | 420.5 | VAFQMC stripe length=8                       | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p4/b1.3n/pbc |
-| -176.978    | 6e-03   | 15.46           | 232 | 420.5 | VMC stripe length=8 (+Jastrow and backflow)  | TODO: ask Luca |
+| -176.978    | 6e-03   | 15.46           | 232 | 420.5 | VMC stripe length=8 (+Jastrow and backflow)  | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_116_8/VMC-uniform/vmc_hubbard.sh) |
