--- a/Hubbard/square_256_PA_107_8_t12.md
+++ b/Hubbard/square_256_PA_107_8_t12.md
@@ -6,4 +6,4 @@
 
 | Energy     | Sigma  | Energy Variance | DOF | Einf      | Method                                                       | Reference |
 |------------|--------|-----------------|-----|-----------|--------------------------------------------------------------|-----------|
-| -204.64(4) | 0.0095 | 43.6(11)        | 214 | 357.78125 | mVMC with SU(2) and momentum projections (gamma point) + RBM + Lanczos (Ncond = 214), alpha = 1, with 4x4 RBM subspace | TODO: ask Michael |
+| -204.64(4) | 0.0095 | 43.6(11)        | 214 | 357.78125 | mVMC with SU(2) and momentum projections (gamma point) + RBM + Lanczos (Ncond = 214), alpha = 1, with 4x4 RBM subspace | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_PA_107_8_t12/mVMC/mVMC.sh) |
