--- a/Hubbard/square_256_P_115_8.md
+++ b/Hubbard/square_256_P_115_8.md
@@ -1,3 +1,3 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Reference |
 |-------------|---------|-----------------|-----|-----------|------------------------|-----------|
-| -183.254272 | .011776 | 1.06(32)        | 230 | 413.28125 | VAFQMC stripe length=8 | TODO: This is from Sorella and this is not public git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8ppp/b1.3n/pbc |
+| -183.254272 | .011776 | 1.06(32)        | 230 | 413.28125 | VAFQMC stripe length=8 | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8ppp/b1.3n/pbc) |
