--- a/Hubbard/square_256_P_112_6.md
+++ b/Hubbard/square_256_P_112_6.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf | Method                                                       | Reference |
 |-------------|---------|-----------------|-----|------|--------------------------------------------------------------|-----------|
-| -221.676288 | .005632 | 0.67(14)        | 224 | 294  | VAFQMC stripe length=8                                       | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc) |
+| -221.676288 | .005632 | 0.67(14)        | 224 | 294  | VAFQMC stripe length=8                                       | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](https://git-scm.sissa.it/TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8/b1.73n/pbc) |
 | -219.204    | 7e-03   | 11.93           | 224 | 294  | VMC stripe length=8 (+Jastrow and backflow)                  | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_112_6/VMC-uniform/vmc_hubbard.sh) |
