--- a/Hubbard/square_256_P_114_4.md
+++ b/Hubbard/square_256_P_114_4.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf     | Method                                     | Reference |
 |-------------|---------|-----------------|-----|----------|--------------------------------------------|-----------|
-| -258.174464 | .005632 | 0.34(8)         | 228 | 203.0625 | VAFQMC stripe length=8                     | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](git-scm.sissa.it:TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8pp/b2.6n/pbc) |
+| -258.174464 | .005632 | 0.34(8)         | 228 | 203.0625 | VAFQMC stripe length=8                     | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](https://git-scm.sissa.it/TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8pp/b2.6n/pbc) |
 | -255.740    | 2.5e-03 | 9.70            | 228 | 203.0625 | VMC uniform state (+Jastrow and backflow)  | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_114_4/VMC-uniform/vmc_hubbard.sh) |
