--- a/Hubbard/square_256_P_110_8.md
+++ b/Hubbard/square_256_P_110_8.md
@@ -1,4 +1,4 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf    | Method                                       | Reference |
 |-------------|---------|-----------------|-----|---------|----------------------------------------------|-----------|
-| -201.037056 | .015104 | 1.09(33)        | 220 | 378.125 | VAFQMC stripe length=8                       | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](https://git-scm.sissa.it/TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8m2/b1.3n/pbc) |
+| -201.037056 | .015104 | 1.09(33)        | 220 | 378.125 | VAFQMC stripe length=8                       | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) |
 | -198.461    | 6e-03   | 16.91           | 220 | 378.125 | VMC stripe length=8 (+Jastrow and backflow)  | [code](https://github.com/varbench/methods/blob/main/scripts/Hubbard/square_256_P_110_8/VMC-uniform/vmc_hubbard.sh) |
