--- a/Hubbard/square_256_P_117_8.md
+++ b/Hubbard/square_256_P_117_8.md
@@ -1,3 +1,3 @@
 | Energy      | Sigma   | Energy Variance | DOF | Einf      | Method                 | Reference |
 |-------------|---------|-----------------|-----|-----------|------------------------|-----------|
-| -175.815680 | .013312 | 1.86(29)        | 234 | 427.78125 | VAFQMC stripe length=8 | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) [code](https://git-scm.sissa.it/TurboLattice/HST_AAD/example/16x16/U8/stripel8doping1su8p5/b1.3n/pbc) |
+| -175.815680 | .013312 | 1.86(29)        | 234 | 427.78125 | VAFQMC stripe length=8 | [paper](https://journals.aps.org/prb/abstract/10.1103/PhysRevB.107.115133) |
